Implemented one BONUS item - Product Search
